fix(devtools): remove useless scrollbar from the demo app

--- a/src/app/devtools-app/devtools-app.component.scss
+++ b/src/app/devtools-app/devtools-app.component.scss
@@ -1,5 +1,5 @@
 iframe {
-  height: 340px;
+  height: 339px;
   width: 100%;
   border: 0;
 }
